Fix a bug with columns not showing scrollable content

--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -5,13 +5,13 @@
   height: fit-content;
   max-height: 97%;
   display: flex;
-  flex-direction: column;
   box-shadow: var(--column-shadow);
   border-radius: 5px;
   .column-empty {
     min-height: 50px;
   }
   .column-container {
+    flex: auto;
     border-radius: 5px;
     background-color: var(--column-secondary);
   }
@@ -61,8 +61,6 @@
     box-shadow: 0 6px 6px -6px var(--shadow-color) inset;
     transition: background-color 0.2s ease;
     overflow: hidden auto;
-    flex-grow: 1;
-    max-height: 100%;
     &.dragging-over {
       background-color: var(--column-hover);
     }
